2010-12-15  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Chris Marrin.

        Reflection does not render properly when -webkit-transform is toggled, untoggled, and retoggled
        https://bugs.webkit.org/show_bug.cgi?id=50967

        If a reflection on a compositied, transformed element is toggled on, off and on,
        then we pick up a cached layer clone that has the wrong transform set on it.

        The fix is to reset those properties on the layer clones that get changed
        when the GraphicsLayer gains a structural layer (for reflection flattening).

        Test: compositing/reflections/remove-add-reflection.html

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::ensureStructuralLayer):

Canonical link: https://commits.webkit.org/64502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74155 268f45cc-cd09-0410-ab3c-d52691b4dbfc